feat: improve ui
